Corrected mobile spacing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,6 +63,7 @@ white-space: nowrap;
  padding-left:13px;
  padding-right: 13px;   
 }
+
 .hamburger-inner#burger-white, .hamburger-inner#burger-white:after, .hamburger-inner#burger-white:before {
   text-shadow: 2px 1px 1px #313030; 
  background-color: #FFFFFF;
@@ -339,7 +340,7 @@ div.projects:nth-child(4) {
   div.projects.mobile {
     max-width: 90vw;
     max-height: 49.99vw;
-    margin: 95px auto;
+    margin: 99px auto;
   }
 }
 .foot-container {
